@@ -39,6 +39,7 @@ import android.os.UserHandle;
 import android.util.Slog;
 
 import com.android.internal.R;
+import com.android.media.flags.Flags;
 
 import java.util.Collections;
 import java.util.List;
@@ -123,7 +124,9 @@ import java.util.Objects;
 
     @Override
     public synchronized List<MediaRoute2Info> getAvailableRoutes() {
-        return Collections.emptyList();
+        return Flags.enableFixForEmptySystemRoutesCrash()
+                ? List.of(mDeviceRoute)
+                : Collections.emptyList();
     }
 
     @Override
